--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,7 @@ file.reference.httpclient-cache-4.5.3.jar=lib/httpclient-cache-4.5.3.jar
 file.reference.httpclient-win-4.5.3.jar=lib/httpclient-win-4.5.3.jar
 file.reference.httpcore-4.4.6.jar=lib/httpcore-4.4.6.jar
 file.reference.httpmime-4.5.3.jar=lib/httpmime-4.5.3.jar
-file.reference.jna-4.1.0.jar=lib/jna-4.1.0.jar
+file.reference.ij.jar=lib\\ij.jar
 file.reference.jna-platform-4.1.0.jar=lib/jna-platform-4.1.0.jar
 includes=**
 jar.compress=false
@@ -48,8 +48,8 @@ javac.classpath=\
     ${file.reference.httpclient-win-4.5.3.jar}:\
     ${file.reference.httpcore-4.4.6.jar}:\
     ${file.reference.httpmime-4.5.3.jar}:\
-    ${file.reference.jna-4.1.0.jar}:\
-    ${file.reference.jna-platform-4.1.0.jar}
+    ${file.reference.jna-platform-4.1.0.jar}:\
+    ${file.reference.ij.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
